deleted stuff related to event-subtitle

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         /></a>
 
         <button
-          class="navbar-toggler d-lg-none"
+          class="navbar-toggler d-lg-none text-white"
           type="button"
           data-toggle="collapse"
           data-target="#collapsibleNavId"
@@ -66,10 +66,10 @@
       <section class="events-section">
         <div class="container">
           <div class="section-content">
-            <h2 class="text-uppercase events-subtitle text-white">
+            <!-- <h2 class="text-uppercase events-subtitle text-white">
               we own the night
-            </h2>
-            <h1 class="text-uppercase events-title text-white-50">Events</h1>
+            </h2> -->
+            <div class="h1 text-uppercase events-title text-white-50">Events</div>
           </div>
           <div class="event-cards pb-3">
             <div class="row">
